plugin/src/test/resources/testData/foo/language/annotators/functions/NestedExpressionIsInvalid_expected.camel
${headerAs(<error descr="Expected type: String">${bodyAs(java.lang.Integer)}</error>, java.lang.String)}